--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -4046,6 +4046,25 @@
         "th":"",
         "id":""
     },
+    "UI.windows.guild.askJoin":{
+        "en":"You have been invited to join the guild <b>&lt;{0}&gt;</b>",
+        "fr":"Vous avez été invité a rejoindre la guilde <b>&lt;{0}&gt;</b>",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.guild.askLeave":{
         "en":"Once you leave a guild, you will have to wait a day before joining a new one. Continue ?",
         "fr":"Une fois la guilde quittée, vous devrez attendre un jour avant de pouvoir un joindre une nouvelle. Continuer ?",
@@ -4268,6 +4287,44 @@
         "jp":"",
         "pt":"",
         "vi":"Q.Định Thành Lũy",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.guild.btn.invite":{
+        "en":"Invite",
+        "fr":"Inviter",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.guild.btn.changeLeader":{
+        "en":"Change Leader",
+        "fr":"Changer de chef",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
         "ar":"",
         "it":"",
         "pl":"",
