--- a/Translation/item.json
+++ b/Translation/item.json
@@ -19017,6 +19017,25 @@
         "th":"",
         "id":""
     },
+    "item.12005.name":{
+        "en":"Pouch",
+        "fr":"Sacoche",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.13000.name":{
         "en":"Skill Book [Slam]",
         "fr":"Livre de Sort [Coup Puissant]",
@@ -28183,6 +28202,25 @@
         "jp":"",
         "pt":"",
         "vi":"Một hòn đá chứa đựng sức mạnh phép thuật. Sử dụng để vào hồn giới của một người.",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.41018.description":{
+        "en":"This stone, filled with a fragment of Bur's power, is only given to the strongest defenders of Mirelia. To Bur, it would only be a grain of sand in a desert, but to you, when you picked it up, you felt the power that it contains.",
+        "fr":"Cette pierre, remplie d'un fragment du pouvoir de Bur, n'est donnée qu'aux plus puissants défenseurs de Mirelia. Pour Bur, ce ne serait qu'un grain de sable dans un désert, mais pour vous, lorsque vous l'avez ramassée, vous avez senti la puissance qu'elle contient.",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
         "ar":"",
         "it":"",
         "pl":"",
