--- a/Translation/item.json
+++ b/Translation/item.json
@@ -27939,6 +27939,25 @@
         "th":"",
         "id":""
     },
+    "item.12005.description":{
+        "en":"This pouch look magic. <i>Unlock the 3rd part of your bag</i>",
+        "fr":"Cette sacoche a l'air magique. <i>Débloque la 3em partie de votre sac</i>",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.20002.description":{
         "en":"<i>It is said that this potion can reveal things that are hidden in plain sight</i>",
         "fr":"<i>Il est dit que cette potion peut révéler des choses cachées à la vue de tous</i>",
