--- a/Translation/event.json
+++ b/Translation/event.json
@@ -170,6 +170,63 @@
         "th":"17:00-18:00 01:00-02:00 (GMT+7)",
         "id":"03:00-04:00 11:00-12:00 (GMT-7)"
     },
+    "event.WEREWOLF_HUNT.title":{
+        "en":"Werewolf Hunt",
+        "fr":"Chasse des Loup-garou",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "event.WEREWOLF_HUNT.description-1":{
+        "en":"EXP, Token",
+        "fr":"EXP, Jeton",
+        "es":"",
+        "zh-cn":"EXP, 代币",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "event.WEREWOLF_HUNT.description-2":{
+        "en":"Time (Server): 02:10-02:25 06:10-06:25<br>10:10-10:25 14:10-14:25<br>18:10-18:25 22:10-22:25",
+        "fr":"Horaires(Serveur): 02:10-02:25 06:10-06:25<br>10:10-10:25 14:10-14:25<br>18:10-18:25 22:10-22:25",
+        "es":"Horarios(Serveur): 02:10-02:25 06:10-06:25<br>10:10-10:25 14:10-14:25<br>18:10-18:25 22:10-22:25",
+        "zh-cn":"时间(服务器) : 02:10-02:25 06:10-06:25<br>10:10-10:25 14:10-14:25<br>18:10-18:25 22:10-22:25",
+        "zh-tw":"",
+        "kr":"02:10-02:25 06:10-06:25<br>10:10-10:25 14:10-14:25<br>18:10-18:25 22:10-22:25 (Serveur)",
+        "ru":"02:10-02:25 06:10-06:25<br>10:10-10:25 14:10-14:25<br>18:10-18:25 22:10-22:25 (Serveur)",
+        "tr":"02:10-02:25 06:10-06:25<br>10:10-10:25 14:10-14:25<br>18:10-18:25 22:10-22:25 (Serveur)",
+        "de":"Zeiten: 02:10-02:25 06:10-06:25<br>10:10-10:25 14:10-14:25<br>18:10-18:25 22:10-22:25 (Serveur)",
+        "jp":"02:10-02:25 06:10-06:25<br>10:10-10:25 14:10-14:25<br>18:10-18:25 22:10-22:25 (Serveur)",
+        "pt":"02:10-02:25 06:10-06:25<br>10:10-10:25 14:10-14:25<br>18:10-18:25 22:10-22:25 (Serveur)",
+        "vi":"Thời Gian (VN): 07:10-07:25 11:10-11:25<br>15:10-15:25 19:10-19:25<br>23:10-23:25 03:10-03:25",
+        "ar":"02:10-02:25 06:10-06:25<br>10:10-10:25 14:10-14:25<br>18:10-18:25 22:10-22:25 (Serveur)",
+        "it":"02:10-02:25 06:10-06:25<br>10:10-10:25 14:10-14:25<br>18:10-18:25 22:10-22:25 (Serveur)",
+        "pl":"02:10-02:25 06:10-06:25<br>10:10-10:25 14:10-14:25<br>18:10-18:25 22:10-22:25 (Serveur)",
+        "th":"02:10-02:25 06:10-06:25<br>10:10-10:25 14:10-14:25<br>18:10-18:25 22:10-22:25 (Serveur)",
+        "id":"02:10-02:00 06:10-06:00<br>10:10-10:00 14:10-14:00<br>18:10-18:00 22:10-22:00 (Serveur)"
+    },
     "event.MASQUERADE.title":{
         "en":"Masquerade",
         "fr":"Mascarade",
