--- a/Translation/item.json
+++ b/Translation/item.json
@@ -25067,6 +25067,63 @@
 		"th": "",
 		"id": ""
 	},
+	"item.79000.name": {
+		"en": "Goku - Grey",
+		"fr": "Goku - Gris",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.79001.name": {
+		"en": "Cloud - Blue",
+		"fr": "Nuage - Bleu",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.79002.name": {
+		"en": "Goku - Aura",
+		"fr": "Goku - Aura",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
     "item.1200.description":{
         "en":"I'm pursuing speed",
         "fr":"je recherche la vitesse",
