--- a/Translation/item.json
+++ b/Translation/item.json
@@ -25124,6 +25124,25 @@
 		"th": "",
 		"id": ""
 	},
+	"item.79003.name": {
+		"en": "Cloud - Yellow",
+		"fr": "Nuage - Jaune",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
     "item.1200.description":{
         "en":"I'm pursuing speed",
         "fr":"je recherche la vitesse",
