--- a/Translation/general.json
+++ b/Translation/general.json
@@ -968,6 +968,44 @@
         "th":"",
         "id":""
     },
+    "general.title.earn-title":{
+        "en": "You just earned the title {0}",
+        "fr": "Vous venez de gagner le titre {0}",
+        "es": "",
+        "zh-cn": "",
+        "zh-tw": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "general.title.lose-title":{
+        "en": "You just lost the title {0}",
+        "fr": "Vous venez de perdre le titre {0}",
+        "es": "",
+        "zh-cn": "",
+        "zh-tw": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
     "general.label.expel":{
         "en":"Expel",
         "fr":"Expulser",
