--- a/Translation/item.json
+++ b/Translation/item.json
@@ -20290,6 +20290,25 @@
         "th":"",
         "id":"Surat Meragukan"
     },
+    "item.30002.name":{
+        "en":"Clam",
+        "fr":"Palourde",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.35000.name":{
         "en":"Lv. 10 Chest",
         "fr":"Coffre Nv. 10",
