--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2310,7 +2310,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chống Bán",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3469,7 +3469,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mã Kim Hàng Tuần",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4077,7 +4077,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bạn nhận được lời mời gia nhập công hội <b>&lt;{0}&gt;</b>",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4324,7 +4324,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mời",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4343,7 +4343,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đổi Lãnh Hội",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5160,7 +5160,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Quay Đổi",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5464,7 +5464,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Quay đổi cuốn sách tinh linh sẽ tiêu tốn {0} <i class='inline-item item-icon-41031'></i> Ngọc Tinh Linh. Tiếp tục chứ?",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9302,7 +9302,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thêm",
         "ar":"",
         "it":"",
         "pl":"",
