--- a/Translation/event.json
+++ b/Translation/event.json
@@ -182,7 +182,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Người Sói Đi Săn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -201,7 +201,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"K.Nghiệm, Mã Kim",
         "ar":"",
         "it":"",
         "pl":"",
@@ -239,7 +239,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Lễ Hội Mặt Nạ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -258,7 +258,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"K.Nghiệm, Đá Celebream, Vàng, Mã Kim",
         "ar":"",
         "it":"",
         "pl":"",
