--- a/Translation/general.json
+++ b/Translation/general.json
@@ -980,7 +980,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Bạn đã nhận được danh hiệu {0}",
         "ar": "",
         "it": "",
         "pl": "",
@@ -999,7 +999,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Bạn đã mất đi danh hiệu {0}",
         "ar": "",
         "it": "",
         "pl": "",
