--- a/Translation/instance.json
+++ b/Translation/instance.json
@@ -600,7 +600,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Khu Rừng Lây Nhiễm",
         "ar": "",
         "it": "",
         "pl": "",
