--- a/Translation/item.json
+++ b/Translation/item.json
@@ -429,7 +429,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tiêu Dùng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -19029,7 +19029,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Túi",
         "ar":"",
         "it":"",
         "pl":"",
@@ -20188,7 +20188,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thuốc Tinh Lọc Lớn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -20302,7 +20302,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nghêu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -22411,7 +22411,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ngọc Tinh Linh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -25003,7 +25003,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Abel - I",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -25022,7 +25022,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Abel - I",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -25041,7 +25041,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Abel - III",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -25098,7 +25098,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Goku - Xám",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -25117,7 +25117,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cloud - Lam",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -25136,7 +25136,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Goku - Vận Khí",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -25155,7 +25155,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cloud - Vàng",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -28046,7 +28046,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chiếc túi chứa đựng phép thuật. <i>Mở khóa trang thứ 3 túi đồ của bạn</i>",
         "ar":"",
         "it":"",
         "pl":"",
@@ -28334,7 +28334,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Viên ngọc này, chứa đựng một phần quyền năng của Bur, chỉ được giao phó cho những thủ hộ mạnh nhất của giới Mirelia. Với Bur, đây trông chả khác gì muối bỏ biển, nhưng với ngươi, khi ngươi nhặt nó lên, ngươi sẽ cảm nhận được sức mạnh lan tỏa ngay lập tức.",
         "ar":"",
         "it":"",
         "pl":"",
