--- a/Translation/map.json
+++ b/Translation/map.json
@@ -2234,7 +2234,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mê Cung Rối Rắm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2253,7 +2253,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Lối Mòn Địa Tầng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2272,7 +2272,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hang Ổ Nữ Chúa Gaia",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2329,7 +2329,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chiến Trường - Đội Xanh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2348,7 +2348,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chiến Trường - Đội Đỏ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2367,7 +2367,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chiến Trường",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2386,7 +2386,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Trang Viên Của Rasyna",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2405,7 +2405,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bãi Săn Người Sói",
         "ar":"",
         "it":"",
         "pl":"",
