--- a/Translation/instance.json
+++ b/Translation/instance.json
@@ -644,5 +644,62 @@
         "pl": "",
         "th": "",
         "id": ""
+    },
+    "instance.INSTANCE_60.name":{
+        "en": "God of the drowned",
+        "fr": "Dieu des noyé",
+        "es": "",
+        "zh-cn": "",
+        "zh-tw": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "instance.INSTANCE_60.description.reward.normal":{
+        "en": "Lv60 common materials, Costume sets and Runestones.",
+        "fr": "Materiel commun Nv60, Costumes et Pierres runiques.",
+        "es": "Materiales usuales Nv60, Conjuntos de vestuario y Piedras rúnicas.",
+        "zh-cn": "60级普通材料、套装符文石.",
+        "zh-tw":"",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "Gewöhnliches Material Lv60, Kostüme und Runensteine.",
+        "jp": "",
+        "pt": "",
+        "vi": "Nguyên liệu thường Cấp 60, Bộ Trang Phục và Đá Cổ Ngữ.",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "instance.INSTANCE_60.description.reward.special":{
+        "en": "Glory Gem",
+        "fr": "Gemme de Gloire",
+        "es": "Gema de Gloria",
+        "zh-cn": "荣誉宝石",
+        "zh-tw":"",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "Rumstein",
+        "jp": "",
+        "pt": "",
+        "vi": "Đá Vinh Quang",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
     }
 }
