--- a/Translation/map.json
+++ b/Translation/map.json
@@ -2279,6 +2279,63 @@
         "th":"",
         "id":""
     },
+    "map.Instance_60_map1.name":{
+        "en":"Starry Town - Entrance",
+        "fr":"Ville étoilée - Entrée",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.Instance_60_map2.name":{
+        "en":"Starry Town - Pathway",
+        "fr":"Ville étoilée - Sentier",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.Instance_60_map3.name":{
+        "en":"Starry Town - Ritual",
+        "fr":"Ville étoilée - Rituel",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "map.S_Slime_Kingdom.name":{
         "en":"Slime Kingdom",
         "fr":"Royaume des Slime",
