--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2302,7 +2302,7 @@
         "en":"Anti Sell Protection",
         "fr":"Protection Anti Vente",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"防出售保护",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -3461,7 +3461,7 @@
         "en":"Weekly Token",
         "fr":"Token Hebdomadaire",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"每周代币",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -4069,7 +4069,7 @@
         "en":"You have been invited to join the guild <b>&lt;{0}&gt;</b>",
         "fr":"Vous avez été invité a rejoindre la guilde <b>&lt;{0}&gt;</b>",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"您已受邀加入公会 <b>&lt;{0}&gt;</b>",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -4316,7 +4316,7 @@
         "en":"Invite",
         "fr":"Inviter",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"邀请",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -4335,7 +4335,7 @@
         "en":"Change Leader",
         "fr":"Changer de chef",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"职务变更",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9294,7 +9294,7 @@
         "en":"Add",
         "fr":"Ajouter",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"添加",
         "zh-tw":"",
         "kr":"",
         "ru":"",
