--- a/Translation/event.json
+++ b/Translation/event.json
@@ -174,7 +174,7 @@
         "en":"Werewolf Hunt",
         "fr":"Chasse des Loup-garou",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"狼人狩猎",
         "zh-tw":"",
         "kr":"",
         "ru":"",
