--- a/Translation/general.json
+++ b/Translation/general.json
@@ -972,7 +972,7 @@
         "en": "You just earned the title {0}",
         "fr": "Vous venez de gagner le titre {0}",
         "es": "",
-        "zh-cn": "",
+        "zh-cn": "你刚获得了称号 {0}",
         "zh-tw": "",
         "kr": "",
         "ru": "",
@@ -991,7 +991,7 @@
         "en": "You just lost the title {0}",
         "fr": "Vous venez de perdre le titre {0}",
         "es": "",
-        "zh-cn": "",
+        "zh-cn": "你刚失去了称号 {0}",
         "zh-tw": "",
         "kr": "",
         "ru": "",
