--- a/Translation/instance.json
+++ b/Translation/instance.json
@@ -649,7 +649,7 @@
         "en": "God of the drowned",
         "fr": "Dieu des noyé",
         "es": "",
-        "zh-cn": "",
+        "zh-cn": "溺水之神",
         "zh-tw": "",
         "kr": "",
         "ru": "",
