--- a/Translation/item.json
+++ b/Translation/item.json
@@ -421,7 +421,7 @@
         "en":"Consumable",
         "fr":"Consommable",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"消耗品",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -19021,7 +19021,7 @@
         "en":"Pouch",
         "fr":"Sacoche",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"背袋",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -20294,7 +20294,7 @@
         "en":"Clam",
         "fr":"Palourde",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"蛤蜊",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -28038,7 +28038,7 @@
         "en":"This pouch look magic. <i>Unlock the 3rd part of your bag</i>",
         "fr":"Cette sacoche a l'air magique. <i>Débloque la 3em partie de votre sac</i>",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"这个袋子看起来很神奇。 <i>解锁你的背包三行空间</i>",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -28326,7 +28326,7 @@
         "en":"This stone, filled with a fragment of Bur's power, is only given to the strongest defenders of Mirelia. To Bur, it would only be a grain of sand in a desert, but to you, when you picked it up, you felt the power that it contains.",
         "fr":"Cette pierre, remplie d'un fragment du pouvoir de Bur, n'est donnée qu'aux plus puissants défenseurs de Mirelia. Pour Bur, ce ne serait qu'un grain de sable dans un désert, mais pour vous, lorsque vous l'avez ramassée, vous avez senti la puissance qu'elle contient.",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"这块石头充满了瓦恩的力量碎片，只有米雷利亚最强大的守卫者才能得到。对瓦恩来说，它只是沙漠中的一粒沙子，但对你来说，当你拿起它时，你感受到了它所蕴含的力量。",
         "zh-tw":"",
         "kr":"",
         "ru":"",
