--- a/Translation/map.json
+++ b/Translation/map.json
@@ -2283,7 +2283,7 @@
         "en":"Starry Town - Entrance",
         "fr":"Ville étoilée - Entrée",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"星海之城 - 入口",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -2302,7 +2302,7 @@
         "en":"Starry Town - Pathway",
         "fr":"Ville étoilée - Sentier",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"星海之城 - 通道",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -2321,7 +2321,7 @@
         "en":"Starry Town - Ritual",
         "fr":"Ville étoilée - Rituel",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"星海之城 - 祭奠",
         "zh-tw":"",
         "kr":"",
         "ru":"",
