--- a/Translation/instance.json
+++ b/Translation/instance.json
@@ -657,7 +657,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Tử Thần Hải Vực",
         "ar": "",
         "it": "",
         "pl": "",
