--- a/Translation/map.json
+++ b/Translation/map.json
@@ -1721,7 +1721,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Thị Trần Tinh Tú",
+        "vi":"Thị Trấn Lấp Lánh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2291,7 +2291,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thị Trấn Lấp Lánh - Lối Vào",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2310,7 +2310,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thị Trấn Lấp Lánh - Thông Lộ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2329,7 +2329,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thị Trấn Lấp Lánh - Tế Đàn",
         "ar":"",
         "it":"",
         "pl":"",
