End of instance 60

--- a/Translation/item.json
+++ b/Translation/item.json
@@ -20195,6 +20195,25 @@
         "th":"",
         "id":""
     },
+    "item.20022.name":{
+        "en":"Protection Scroll",
+        "fr":"Parchemin de Protection",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.21008.name":{
         "en":"Red Soul",
         "fr":"Âme Rouge",
