--- a/Translation/item.json
+++ b/Translation/item.json
@@ -12773,6 +12773,25 @@
         "th":"",
         "id":""
     },
+    "item.6081.name":{
+        "en":"Long Horn (Grey)",
+        "fr":"Longue Cornes (Gris)",
+        "es":"",
+        "zh-cn":"长角 (灰色)",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Sừng Dài (Xám)",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.7000.name":{
         "en":"Minor Healing Potion",
         "fr":"Potion de Guérison Mineure",
